# DescuentosStock

./: .gitignore  Plantilla.xlsx  Plantilla_flow_test.xlsx  Plantilla_test.xlsx  README - USER.md  README.md  app.py  pyproject.toml
Canjes/: Movimientos_Files__222233555.Archivo.114540.xlsx  Movimientos_Files__6622254.Archivo.151224.xlsx  Movimientos_Files__9955887.Archivo.114611.xlsx
Descuentos/: 2026-06-20.xlsx
scratch/: run_canjes_debug.py  test_complete_flow.py  test_missing_sheet.py  test_move_files.py  test_pdf_parser.py  test_template_pedidos_descontados.py  test_xlutils.py
src/: funciones.py  helpers.py  init.py
